Transform Bella to Reze: Complete character rebrand
- Update README.md: Korean/English bilingual documentation
- Transform BellaAI → RezeAI class across all files
- Update Reze persona: Chainsaw Man character personality
- Add Gemini API system prompt for Reze character
- Optimize local LLM prompts for LaMini-Flan-T5-77M
- Update UI text: Bella → Reze throughout
- Add Rezeicon folder (replace Bellaicon)
- Credits: Add original Bella AI team acknowledgement
- Fix: Update all import statements and references

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bella - Your AI Companion</title>
+    <title>REZE - Your AI Companion</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="chatStyles.css">
     <!-- Include Font Awesome icon library for microphone icons / 마이크 아이콘용 Font Awesome 아이콘 라이브러리 포함 -->
@@ -13,7 +13,7 @@
 
     <!-- Loading screen / 로딩 화면 -->
     <div id="loading-screen">
-        <img src="Bellaicon/Generated image.webp" alt="Loading Bella...">
+        <img src="Rezeicon/Generated image.webp" alt="Loading Reze...">
     </div>
 
     <!-- Video background / 비디오 배경 -->
