feat: Add RAG system and purple theme for Reze
UI Updates:
- Changed chat bubble colors from pink to purple (Reze's hair color)
- Updated welcome message style with purple gradient
- Modified typing indicator with purple theme
- Updated all buttons to purple color scheme

RAG System Implementation:
- Added RAG (Retrieval-Augmented Generation) system
- Created reze_knowledge.txt with comprehensive character info from Namuwiki
- Implemented rezeRAG.js for JavaScript RAG integration
- Added rag_reze.py for Python RAG implementation
- Created RAG_GUIDE.md with detailed implementation guide

AI Model Updates:
- Updated Modelfile.reze with Korean-only responses
- Fixed base model from llama3.2:1b to gemma2:2b
- Enhanced ollamaAPI.js with RAG knowledge search
- Fixed ASR model loading with proper local paths

Documentation:
- Added REZE_AI_SETUP.md for local AI setup guide
- Created setup_reze_ai.sh automated setup script
- Updated README.md with new features

Bug Fixes:
- Fixed video loop attribute in index.html
- Improved ASR model error handling in core.js
- Enhanced logging for better debugging

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 
     <!-- Video background / 비디오 배경 -->
     <div class="video-container">
-        <video autoplay muted class="bg-video active" id="video1">
-            <source src="视频资源/3D 建模图片制作.mp4" type="video/mp4">
+        <video autoplay muted loop class="bg-video active" id="video1">
+            <source src="영상자료/rezevideo_1.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
-        <video muted class="bg-video" id="video2">
+        <video muted loop class="bg-video" id="video2">
             <source src="" type="video/mp4">
             Your browser does not support the video tag.
         </video>
