fix video play problem

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <source src="영상자료/rezevideo_1.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
-        <video muted loop class="bg-video" id="video2">
-            <source src="" type="video/mp4">
+        <video autoplay muted loop class="bg-video" id="video2">
+            <source src="영상자료/rezevideo_2.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
